variables.RunFour.scala.error
Erreur de compilation :
RunFour:5: error: value ++ is not a member of Int
  if (estSurBiscuit) nbBiscuit++;
                              ^